--- a/muslimorganizer/app/build.gradle
+++ b/muslimorganizer/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
 
     lintOptions{
@@ -12,9 +12,9 @@ android {
 
     defaultConfig {
         applicationId "com.fekracomputers.muslimmate"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 15
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 16
         versionName "1.3"
         multiDexEnabled true
     }
@@ -32,21 +32,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/com-tndgl-ogzjx284034.jar')
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:multidex:1.0.0'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.google.android.gms:play-services:10.2.4'
-    testCompile 'junit:junit:4.12'
-    compile 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
-    compile 'it.neokree:MaterialTabs:0.11'
-    compile 'com.memetix:microsoft-translator-java-api:0.6.2'
-    compile 'com.koushikdutta.ion:ion:2.0.7'
-    compile 'cn.carbs.android:AutoZoomInImageView:1.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/com-tndgl-ogzjx284034.jar')
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+    implementation 'it.neokree:MaterialTabs:0.11'
+    implementation 'com.memetix:microsoft-translator-java-api:0.6.2'
+    implementation 'com.koushikdutta.ion:ion:2.0.7'
+    implementation 'cn.carbs.android:AutoZoomInImageView:1.0.1'
 }
