--- a/muslimorganizer/app/src/main/AndroidManifest.xml
+++ b/muslimorganizer/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:required="true" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
